--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,18 @@
-<p>navbar works!</p>
+<div class="nav-container">
+    <div class="top-bar">
+        <img src="./assets/img/logo.png">
+        <img (click)="navMenu()" src="./assets/img/Property1.png">
+    </div>
+</div>
+
+<div class="menu-container">
+    <nav>
+        <a href="#">About me</a>
+        <a href="#">My skills</a>
+        <a href="#">Portfolio</a>
+    </nav>
+    <div class="menu-footer">
+        <p>Say Hi!</p>
+        <a href= "mailto:pesendorfer.gerald@hotmail.com">pesendorfer.gerald@hotmail.com</a>
+    </div>
+</div>
