--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -56,6 +56,7 @@ main {
                 writing-mode: vertical-lr;
                 transform: rotate(180deg);
                 padding-top: 4.55%;
+                margin: 0;
             }
 
             &:nth-child(2) {
