--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,36 +2,162 @@
     width: 100vw;
     display: flex;
     justify-content: center;
-
+    height: 92px;
 
     .top-bar {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 90%;
-        height: 92px;
         background: #FFFCF3;
 
-        img {
-            height: 32px;
+        button {
+            all: unset;
+
+            img {
+                height: 32px;
+            }
         }
+
+
     }
 }
 
 .menu-container {
+    position: absolute;
+    top: 92px;
     width: 100vw;
     height: calc(100vh - 92px);
     display: flex;
-    // justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    transform: translateY(2500px) !important;
+    transition: transform 0.225s ease-in-out;
+
 
     nav {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: #FFFCF3;
+        width: 100vw;
+        flex-grow: 1;
+
+        .border {
+            height: 170px;
+            width: 600px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+
+            &::before {
+                content: attr(href);
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                border-bottom: 4px solid black;
+                border-left: 4px solid black;
+                width: 39px;
+                height: 52px;
+
+                @keyframes border-animation {
+                    35% {
+                        height: 0px;
+                        width: 39px;
+                        left: 0px;
+                    }
+
+                    45% {
+                        width: 600px;
+                    }
+
+                    70% {
+                        height: 0px;
+                        width: 600px;
+                        left: 0px;
+
+                    }
+
+                    100% {
+                        height: 0px;
+                        width: 250px;
+                        left: 0px;
+                        left: 350px;
+                    }
+                }
+            }
+
+            &:hover::before {
+                animation: border-animation 0.2s ease-out;
+                animation-fill-mode: forwards;
+
+            }
+
+            &:active::before {
+                bottom: 0 !important;
+                left: 0 !important;
+                height: 170px !important;
+                width: 600px !important;
+                border: 4px solid black;
+            }
+
+            a {
+                font-size: 96px;
+                font-weight: 700;
+                font-family: Syne;
+                color: #000000;
+                text-decoration: none;
+            }
+        }
     }
 
     .menu-footer {
-        display: flex;
+        width: 100vw;
+        background-color: #FFFCF3;
+
+        .menu-footer-content {
+            clip-path: polygon(0 0, 100% 50%, 100% 100%, 0% 100%);
+            background-color: #000000;
+            height: 250px;
+            display: flex;
+            align-items: flex-end;
+            justify-content: space-between;
+            padding: 0% 5% 50px;
+
+            p,
+            a {
+                color: #FFFCF3;
+                text-decoration: none;
+            }
+
+            p {
+                font-size: 78px;
+                font-family: Syne;
+                font-weight: 800;
+                margin: 0;
+            }
+
+            a {
+                font-size: 23px;
+                font-family: Overpass;
+            }
+
+            .footer-links {
+                width: 200px;
+                display: flex;
+                justify-content: space-between;
+
+                img {
+                    height: 40px;
+                }
+            }
+        }
     }
+}
+
+.hide-menu {
+    transform: translateY(0px) !important;
 }
