fix animaton bug menu

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-container">
     <div class="top-bar">
         <img src="./assets/img/logo.png">
-        <button [disabled]="buttonDisabled" (click)="navMenu()">
+        <button (click)="navMenu()">
             <img src="./assets/img/Property{{ burgerIndex }}.png">
         </button>
     </div>
