add about me, fix scss from header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,8 +10,15 @@
     </header>
 
     <div class="basic-information">
-        <p>pesendorfer.gerald@hotmail.com</p>
-        <p>Scroll<br>
-            Down</p>
+        <p class="email">pesendorfer.gerald@hotmail.com</p>
+
+        <div class="info-right">
+            <div class="animation-container">
+                <img src=".\assets\img\arrow.png">
+            </div>
+            <p>Scroll<br>
+                Down</p>
+        </div>
+
     </div>
 </main>
