--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,9 +26,15 @@
                 <a href="mailto:pesendorfer.gerald@hotmail.com">pesendorfer.gerald@hotmail.com</a>
             </div>
             <div class="footer-links">
-                <img src="./assets/img/github.png">
-                <img src="./assets/img/email.png">
-                <img src="./assets/img/linkedin.png">
+                <a  href="#">
+                    <img src="./assets/img/github.png">
+                </a>
+                <a  href="#">
+                    <img src="./assets/img/email.png">
+                </a>
+                <a  href="#">
+                    <img src="./assets/img/linkedin.png">
+                </a>
             </div>
         </div>
     </div>
