--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,9 +6,9 @@ app-navbar {
     z-index: 1;
 }
 
-app-header {
+app-header,
+app-about-me {
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    justify-content: center;
     width: 100vw;
 }
