--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -3,16 +3,21 @@
     display: flex;
     justify-content: center;
     height: 92px;
+    background: #FFFCF3;
 
     .top-bar {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 90%;
-        background: #FFFCF3;
+
+        img {
+            cursor: pointer;
+        }
 
         button {
             all: unset;
+            cursor: pointer;
 
             img {
                 height: 32px;
@@ -138,6 +143,11 @@
                 font-family: Syne;
                 font-weight: 800;
                 margin: 0;
+
+                &:hover {
+                    transition: color 0.225s ease-in-out;
+                    color: #00BC8F;
+                }
             }
 
             a {
@@ -150,8 +160,12 @@
                 display: flex;
                 justify-content: space-between;
 
-                img {
-                    height: 40px;
+                a {
+                    cursor: pointer;
+
+                    img {
+                        height: 40px;
+                    }
                 }
             }
         }
