--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -7,6 +7,11 @@
         font-family: Syne;
         font-size: 78px;
         font-weight: 800;
+
+        &:hover {
+            transition: color 0.190s ease-in-out;
+            color: #00BC8F;
+        }
     }
 
     .introduction-info {
@@ -39,6 +44,7 @@
                     font-weight: 400;
                     border: 4px solid black;
                     transition: 0.1s ease-out;
+                    background-color: #FFFCF3;
 
                     &:hover {
                         width: 268px;
