--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,8 @@ app-navbar {
 }
 
 app-header,
-app-about-me {
+app-about-me,
+app-arrow {
     display: flex;
     justify-content: center;
     width: 100vw;
