add my skills, arrow, arrow 2 and portfolio, add visible function to arrow for animation

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -20,8 +20,9 @@
             </div>
         </div>
 
-        <img src="./assets\img\me.jpg">
+        <div class="about-img">
+            <img src="./assets\img\me.jpg">
+        </div>
 
     </div>
-
 </div>
