--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,6 @@
 .introduction-container {
     width: 90%;
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
 
@@ -62,8 +63,40 @@
         }
     }
 
-    img {
-        height: 530px;
-        padding-left: 5%;
+    .about-img {
+        position: relative;
+
+        &::before {
+            content: attr(href);
+            position: absolute;
+            border: 4px solid black;
+            top: 20px;
+            left: 20px;
+            width: 526px;
+            height: 526px;
+            opacity: 0.0;
+            transition: opacity 0.19s ease-in-out;
+        }
+
+        
+        &:hover::before {
+            opacity: 1;
+        }
+
+        // &:hover::before {
+        //     content: attr(href);
+        //     position: absolute;
+        //     border: 4px solid black;
+        //     top: 20px;
+        //     left: 20px;
+        //     width: 526px;
+        //     height: 526px;
+        //     opacity: 0.0;
+        //     animation: border-opacity opacity 0.3s ease-in-out;
+        // }
+
+        img {
+            height: 530px;
+        }
     }
 }
