--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 <app-about-me></app-about-me>
-<app-arrow></app-arrow>
+<app-arrow [arrowTrigger]="isArrowVisible"></app-arrow>
+<app-my-skills (visible)="isArrowVisible = $event"></app-my-skills>
+<app-arrow2></app-arrow2>
+<app-portfolio></app-portfolio>
