--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,9 @@ app-navbar {
 
 app-header,
 app-about-me,
-app-arrow {
+app-arrow,
+app-my-skills,
+app-portfolio {
     display: flex;
     justify-content: center;
     width: 100vw;
