--- a/src/app/arrow2/arrow2.component.scss
+++ b/src/app/arrow2/arrow2.component.scss
@@ -38,7 +38,7 @@
         }
 
         .arrow-animation {
-            animation: arrowAnimation 0.5s ease-in-out forwards;
+            animation: arrowAnimation 0.5s ease-in-out forwards; // ;infinite forwards
         }
 
         @keyframes arrowAnimation {
