--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,19 +4,21 @@
         <p>This page is a sample of my work - please feel free to try them out.</p>
     </div>
 
-    <div class="portfolio-list"></div>
-
-    <div class="container">
-        <div *ngFor="let item of items; let i = index" class="item" [class.reverse]="i % 2 === 1">
+    <div class="portfolio-list">
+        <div *ngFor="let item of items; let i = index" class="projects" [class.reverse]="i % 2 === 1">
           <div class="image">
             <img src="{{ item.image }}" alt="Bild {{ i + 1 }}">
+            <img class="pointer" src=".\assets\img\portfolio-img\pointer.png" alt="">
           </div>
           <div class="text">
-            {{ item.text }}
+            <div class="count">0{{ i + 1 }}/0{{ items.length }}</div>
+            <div class="description">
+              <h3>{{ item.name }}</h3>
+              <span>{{ item.techStack }}</span>
+              <p>{{ item.description }}</p>
+              <div class="github-link">Github</div>
+            </div>
           </div>
         </div>
       </div>
-
-
-
 </div>
