--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,15 @@ app-navbar {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 99;
 }
 
 app-header,
 app-about-me,
 app-arrow,
 app-my-skills,
-app-portfolio {
+app-portfolio,
+app-arrow2 {
     display: flex;
     justify-content: center;
     width: 100vw;
