--- a/src/app/arrow2/arrow2.component.html
+++ b/src/app/arrow2/arrow2.component.html
@@ -1,8 +1,8 @@
-<div id="arrowTop" class="arrow-container">
+<div class="arrow-container">
     <div class="arrow arrowAnimation-Container"> 
-        <!--  -->
+        <!-- [class.arrowAnimation-Container]="arrowTrigger" -->
         <div class="line arrow-animation"></div>
-        <!--  -->
+        <!-- [class.arrow-animation]="arrowTrigger" -->
         <div class="line"></div>
         <div class="line"></div>
     </div>
