--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="portfolio-list">
-        <div *ngFor="let item of items; let i = index" class="projects" [class.reverse]="i % 2 === 1">
+        <div *ngFor="let item of items; let i = index" [class.projects]="i % 2 === 0" [class.projects-reverse]="i % 2 === 1">
           <div class="image">
             <img src="{{ item.image }}" alt="Bild {{ i + 1 }}">
             <img class="pointer" src=".\assets\img\portfolio-img\pointer.png" alt="">
