--- a/src/app/arrow2/arrow2.component.html
+++ b/src/app/arrow2/arrow2.component.html
@@ -1,8 +1,6 @@
 <div class="arrow-container">
-    <div class="arrow arrowAnimation-Container"> 
-        <!-- [class.arrowAnimation-Container]="arrowTrigger" -->
-        <div class="line arrow-animation"></div>
-        <!-- [class.arrow-animation]="arrowTrigger" -->
+    <div [class.arrowAnimation-Container]="arrowTrigger2" class="arrow"> 
+        <div [class.arrow-animation]="arrowTrigger2" class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
     </div>
