--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="portfolio-container">
     <div class="portfolio-header">
         <h2>Portfolio</h2>
-        <p>This page is a sample of my work - please feel free to try them out.</p>
+        <p #arrowTrigger>This page is a sample of my work - please feel free to try them out.</p>
     </div>
 
     <div class="portfolio-list">
