--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
 <app-about-me></app-about-me>
 <app-arrow [arrowTrigger]="isArrowVisible"></app-arrow>
 <app-my-skills (visible)="isArrowVisible = $event"></app-my-skills>
-<app-arrow2></app-arrow2>
-<app-portfolio></app-portfolio>
+<app-arrow2 [arrowTrigger2]="isArrowVisible2"></app-arrow2>
+<app-portfolio (visible2)="isArrowVisible2 = $event"></app-portfolio>
+<app-arrow3></app-arrow3>
+<app-contact></app-contact>
