--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,9 @@ app-about-me,
 app-arrow,
 app-my-skills,
 app-portfolio,
-app-arrow2 {
+app-arrow2,
+app-arrow3,
+app-contact {
     display: flex;
     justify-content: center;
     width: 100vw;
