add contact section

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,17 +4,33 @@
             <p>Say Hi!</p>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-links">
-            <a href="#">
-                <img src="./assets/img/github.png">
-            </a>
-            <a href="#">
-                <img src="./assets/img/email.png">
-            </a>
-            <a href="#">
-                <img src="./assets/img/linkedin.png">
-            </a>
+    <div class="contact-main-container">
+        <div class="contact-form">
+            <h3>Want to discuss a new project?</h3>
+            <p>Say hello! let's discuss your ideas and make it happen</p>
+            <div class="input-container">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Your email">
+                <textarea class="area" type="text" placeholder="Your message"></textarea>
+                <div>
+                    <div class="agree-box"></div>
+                    <p>I've read the <a>privacy policy</a> and agree to the processing of my data as outlined.</p>
+                </div>
+                <button>SEND MESAGE</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footer-links">
+                <a href="#">
+                    <img src="./assets/img/github.png">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/email.png">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/linkedin.png">
+                </a>
+            </div>
         </div>
     </div>
 </div>
