--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -28,20 +28,89 @@
         }
     }
 
-    .footer {
-        width: 100%;
+    .contact-main-container {
         background-color: #000000;
 
-        .footer-links {
-            width: 200px;
+        .contact-form {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
 
-            a {
-                cursor: pointer;
+            h3 {
+                font-family: Overpass;
+                font-size: 32px;
+                font-weight: 700;
+                text-align: center;
+                color: #00BC8F;
+            }
 
-                img {
-                    height: 40px;
+            p {
+                font-family: Overpass;
+                font-size: 23px;
+                font-weight: 400;
+                text-align: center;
+                color: #FFFCF3;
+            }
+
+            .input-container {
+                display: flex;
+                flex-direction: column;
+                width: 617px;
+                // height: 490px;
+
+                input,
+                textarea {
+                    outline: none;
+                    width: 617px;
+                    // height: calc(50px - 8px);
+                    padding: 15px 25px 15px 25px;
+                    margin-bottom: 22px;
+                    border-bottom: 2px solid #FFFCF3;
+                    border-top: 4px solid transparent;
+                    border-right: 4px solid transparent;
+                    border-left: 4px solid transparent;
+                    background-color: #000000;
+                    font-family: Overpass;
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #FFFCF3;
+
+                    &:hover {
+                        border: 4px solid #FFFCF3;
+                        margin-bottom: 20px;
+                    }
+
+                    &:focus {
+                        border: 2px solid #FFFCF3;
+                        margin: 2px 2px 22px 2px;;
+                    }
+                }
+
+                textarea {
+                    min-height: 198px;
+                    background-image: url('./../../assets/img/resizer.png'); // Pfad zu deinem Bild
+                    background-repeat: no-repeat; // Verhindere die Wiederholung des Hintergrundbilds
+                    background-position: bottom 5px right 5px;
+                    resize: vertical;
+                }
+            }
+        }
+
+        .footer {
+            width: 100%;
+            background-color: #000000;
+
+            .footer-links {
+                width: 200px;
+                display: flex;
+                justify-content: space-between;
+
+                a {
+                    cursor: pointer;
+
+                    img {
+                        height: 40px;
+                    }
                 }
             }
         }
