--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,14 +9,29 @@
             <h3>Want to discuss a new project?</h3>
             <p>Say hello! let's discuss your ideas and make it happen</p>
             <div class="input-container">
-                <input type="text" placeholder="Your name">
-                <input type="email" placeholder="Your email">
-                <textarea class="area" type="text" placeholder="Your message"></textarea>
-                <div>
-                    <div class="agree-box"></div>
-                    <p>I've read the <a>privacy policy</a> and agree to the processing of my data as outlined.</p>
+                <div class="befor-container" [ngClass]="{'input-focus input-name': nameFocus}">
+                    <input class="name" type="text" placeholder="Your name" (focus)='nameFocus = true' (focusout)='nameFocus = false'>
                 </div>
-                <button>SEND MESAGE</button>
+                <div class="befor-container" [ngClass]="{'input-focus input-email': emailFocus}">
+                    <input class="email" type="email" placeholder="Your email" (focus)='emailFocus = true' (focusout)='emailFocus = false'>
+                </div>
+                <div class="befor-container" [ngClass]="{'input-focus input-message': messageFocus}">
+                    <textarea class="area" type="text" placeholder="Your message" (focus)='messageFocus = true' (focusout)='messageFocus = false'>
+                    </textarea>
+                </div>
+                <div class="privacy-policy-box">
+                    <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+                        <label class="agree-box">
+                            <input type="checkbox">
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+                    <p>I've read the</p>
+                    <div class="privacy-policy-link"><a [ngClass]="{'hovered': isHovered}" href="#">privacy policy</a>
+                    </div>
+                    <p> and agree to the processing of my data as outlined.</p>
+                </div>
+                <button>Send Message</button>
             </div>
         </div>
         <div class="footer">
