--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -56,42 +56,166 @@
                 display: flex;
                 flex-direction: column;
                 width: 617px;
-                // height: 490px;
+                align-items: center;
 
-                input,
-                textarea {
-                    outline: none;
-                    width: 617px;
-                    // height: calc(50px - 8px);
-                    padding: 15px 25px 15px 25px;
-                    margin-bottom: 22px;
-                    border-bottom: 2px solid #FFFCF3;
-                    border-top: 4px solid transparent;
-                    border-right: 4px solid transparent;
-                    border-left: 4px solid transparent;
-                    background-color: #000000;
-                    font-family: Overpass;
-                    font-size: 16px;
-                    font-weight: 400;
-                    color: #FFFCF3;
+                .befor-container {
+                    position: relative;
 
-                    &:hover {
-                        border: 4px solid #FFFCF3;
-                        margin-bottom: 20px;
-                    }
+                    // &::after {
+                    //     content: "Your name";
+                    //     position: absolute;
+                    //     background-color: #000000;
+                    //     color: #FFFCF3;
+                    //     font-family: Overpass;
+                    //     font-weight: 200;
+                    //     font-size: 16;
+                    //     top: -7px;
+                    //     left: 19px;
+                    //     z-index: 2;
+                    //     opacity: 0.5;
+                    // }
 
-                    &:focus {
-                        border: 2px solid #FFFCF3;
-                        margin: 2px 2px 22px 2px;;
+                    input,
+                    textarea {
+                        position: relative;
+                        outline: none;
+                        width: 617px;
+                        padding: 15px 25px 15px 25px;
+                        margin-bottom: 22px;
+                        border-bottom: 2px solid #FFFCF3;
+                        border-top: 4px solid transparent;
+                        border-right: 4px solid transparent;
+                        border-left: 4px solid transparent;
+                        background-color: #000000;
+                        font-family: Overpass;
+                        font-size: 16px;
+                        font-weight: 400;
+                        color: #FFFCF3;
+                        background: url("./../../assets/img/contact/ok.png") no-repeat scroll right 15px center;
+
+                        &:hover {
+                            border: 4px solid #FFFCF3;
+                            margin-bottom: 20px;
+                        }
+
+                        &:focus {
+                            border: 2px solid #FFFCF3;
+                            margin: 2px 2px 22px 2px;
+
+                            &::placeholder {
+                                opacity: 0;
+                            }
+                        }
                     }
                 }
 
                 textarea {
                     min-height: 198px;
-                    background-image: url('./../../assets/img/resizer.png'); // Pfad zu deinem Bild
-                    background-repeat: no-repeat; // Verhindere die Wiederholung des Hintergrundbilds
-                    background-position: bottom 5px right 5px;
+                    // background-image: url('./../../assets/img/resizer.png');
+                    // background-repeat: no-repeat;
+                    // background-position: bottom 5px right 5px;
+                    background-position: right 15px top 13px;
                     resize: vertical;
+                }
+
+                .privacy-policy-box {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+
+                    .agree-hover {
+                        width: 24px;
+                        height: 24px;
+                        border-radius: 50%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        margin-right: 10px;
+
+                        &:hover {
+                            background-color: #00BC8F;
+                        }
+
+                        .agree-box {
+                            position: relative;
+                            cursor: pointer;
+                            -webkit-user-select: none;
+                            -moz-user-select: none;
+                            -ms-user-select: none;
+                            user-select: none;
+                            width: 14px;
+                            height: 14px;
+                            border: 2px solid #FFFCF3;
+                            border-radius: 2px;
+
+                            input {
+                                position: absolute;
+                                opacity: 0;
+                                cursor: pointer;
+                                height: 0;
+                                width: 0;
+
+                                &:checked~.checkmark:after {
+                                    display: block;
+                                }
+                            }
+
+                            .checkmark {
+                                &:after {
+                                    position: absolute;
+                                    content: "";
+                                    display: none;
+                                    left: 4px;
+                                    top: 1px;
+                                    width: 4px;
+                                    height: 8px;
+                                    border: solid #FFFCF3;
+                                    border-width: 0 2px 2px 0;
+                                    -webkit-transform: rotate(45deg);
+                                    -ms-transform: rotate(45deg);
+                                    transform: rotate(45deg);
+                                }
+                            }
+                        }
+                    }
+
+                    p {
+                        font-family: Overpass;
+                        font-size: 14px;
+                        font-weight: 400;
+                        color: #FFFCF3;
+                    }
+
+                    .privacy-policy-link {
+                        width: 105px;
+                        display: flex;
+                        justify-content: center;
+
+                        a {
+                            font-family: Overpass;
+                            font-size: 14px;
+                            font-weight: 400;
+                            text-decoration: none;
+                            color: #00BC8F;
+
+                            &:hover {
+                                font-weight: 800;
+                            }
+                        }
+                    }
+                }
+
+                button {
+                    width: 269px;
+                    height: 68px;
+                    border: 4px solid #FFFCF3;
+                    opacity: 0.3;
+                    background-color: #000000;
+                    color: #FFFCF3;
+                    font-family: Overpass;
+                    font-size: 23px;
+                    font-weight: 400;
+                    text-align: center;
                 }
             }
         }
@@ -115,4 +239,32 @@
             }
         }
     }
+}
+
+.hovered {
+    font-weight: 800 !important;
+}
+
+.input-focus::after {
+    content: "";
+    position: absolute;
+    background-color: #000000;
+    color: #FFFCF3;
+    font-family: Overpass;
+    font-weight: 200;
+    font-size: 16;
+    top: -7px;
+    left: 19px;
+}
+
+.input-name::after {
+    content: "Your name";
+}
+
+.input-email::after {
+    content: "Your email";
+}
+
+.input-message::after {
+    content: "Your message";
 }
