--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,14 +10,26 @@
             <p>Say hello! let's discuss your ideas and make it happen</p>
             <div class="input-container">
                 <div class="befor-container" [ngClass]="{'input-focus input-name': nameFocus}">
-                    <input class="name" type="text" placeholder="Your name" (focus)='nameFocus = true' (focusout)='nameFocus = false'>
+                    <input class="name" type="text" placeholder="Your name" (focus)='nameFocus = true'
+                        (focusout)='nameFocus = false'>
+                    <div class="status-img-container">
+                        <img src="./../../assets/img/contact/ok.png">
+                    </div>
                 </div>
                 <div class="befor-container" [ngClass]="{'input-focus input-email': emailFocus}">
-                    <input class="email" type="email" placeholder="Your email" (focus)='emailFocus = true' (focusout)='emailFocus = false'>
+                    <input class="email" type="email" placeholder="Your email" (focus)='emailFocus = true'
+                        (focusout)='emailFocus = false'>
+                    <div class="status-img-container">
+                        <img src="./../../assets/img/contact/ok.png">
+                    </div>
                 </div>
                 <div class="befor-container" [ngClass]="{'input-focus input-message': messageFocus}">
-                    <textarea class="area" type="text" placeholder="Your message" (focus)='messageFocus = true' (focusout)='messageFocus = false'>
-                    </textarea>
+                    <div class="pull-tab"></div>
+                    <textarea class="message" type="text" placeholder="Your message" (focus)='messageFocus = true'
+                        (focusout)='messageFocus = false'></textarea>
+                    <div class="status-img-container">
+                        <img src="./../../assets/img/contact/ok.png">
+                    </div>
                 </div>
                 <div class="privacy-policy-box">
                     <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
