--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -61,26 +61,23 @@
                 .befor-container {
                     position: relative;
 
-                    // &::after {
-                    //     content: "Your name";
-                    //     position: absolute;
-                    //     background-color: #000000;
-                    //     color: #FFFCF3;
-                    //     font-family: Overpass;
-                    //     font-weight: 200;
-                    //     font-size: 16;
-                    //     top: -7px;
-                    //     left: 19px;
-                    //     z-index: 2;
-                    //     opacity: 0.5;
-                    // }
+                    .pull-tab {
+                        height: 30px;
+                        width: 30px;
+                        position: absolute;
+                        bottom: 42px;
+                        right: -7px;
+                        pointer-events: none;
+                        background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
+                        z-index: 2;
+                    }
 
                     input,
                     textarea {
                         position: relative;
                         outline: none;
                         width: 617px;
-                        padding: 15px 25px 15px 25px;
+                        padding: 15px 60px 15px 25px;
                         margin-bottom: 22px;
                         border-bottom: 2px solid #FFFCF3;
                         border-top: 4px solid transparent;
@@ -91,7 +88,7 @@
                         font-size: 16px;
                         font-weight: 400;
                         color: #FFFCF3;
-                        background: url("./../../assets/img/contact/ok.png") no-repeat scroll right 15px center;
+                        // background: url("./../../assets/img/contact/ok.png") no-repeat scroll right 15px center;
 
                         &:hover {
                             border: 4px solid #FFFCF3;
@@ -107,15 +104,23 @@
                             }
                         }
                     }
+
+                    .status-img-container {
+                        position: absolute;
+                        top: 15px;
+                        right: 25px;
+                    }
                 }
 
                 textarea {
                     min-height: 198px;
-                    // background-image: url('./../../assets/img/resizer.png');
-                    // background-repeat: no-repeat;
-                    // background-position: bottom 5px right 5px;
-                    background-position: right 15px top 13px;
                     resize: vertical;
+                    
+                   
+                }
+
+                textarea::-webkit-resizer {
+                    display: none;
                 }
 
                 .privacy-policy-box {
