--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -42,6 +42,8 @@
                 font-weight: 700;
                 text-align: center;
                 color: #00BC8F;
+                margin-top: 0px;
+                margin-bottom: 0px;
             }
 
             p {
@@ -50,6 +52,8 @@
                 font-weight: 400;
                 text-align: center;
                 color: #FFFCF3;
+                margin-top: 18px;
+                margin-bottom: 18px;
             }
 
             .input-container {
@@ -65,7 +69,7 @@
                         height: 30px;
                         width: 30px;
                         position: absolute;
-                        bottom: 42px;
+                        bottom: 25px;
                         right: -7px;
                         pointer-events: none;
                         background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
@@ -78,7 +82,7 @@
                         outline: none;
                         width: 617px;
                         padding: 15px 60px 15px 25px;
-                        margin-bottom: 22px;
+                        margin-bottom: 2.5px;
                         border-bottom: 2px solid #FFFCF3;
                         border-top: 4px solid transparent;
                         border-right: 4px solid transparent;
@@ -91,12 +95,12 @@
 
                         &:hover {
                             border: 4px solid #FFFCF3;
-                            margin-bottom: 20px;
+                            margin-bottom: 0px;
                         }
 
                         &:focus {
                             border: 2px solid #FFFCF3;
-                            margin: 2px 2px 22px 2px;
+                            margin: 2px 2px 2.75px 2px;
 
                             &::placeholder {
                                 opacity: 0;
@@ -109,13 +113,31 @@
                         top: 15px;
                         right: 25px;
                     }
+
+                    .error-message-container {
+                        padding: 8px;
+                        animation: slide-in 0.2s ease-in-out;
+
+                        .error-message-active {
+                            font-family: Overpass;
+                            font-size: 12px;
+                            color: #E61C40;
+                            padding-top: 5px;
+                            padding-bottom: 18px;
+                            animation: slide-in 0.2s ease-in-out;
+                        }
+                    }
+
+                    .error-active {
+                        padding: 0 !important;
+                    }
                 }
 
                 textarea {
                     min-height: 198px;
                     resize: vertical;
-                    
-                   
+
+
                 }
 
                 textarea::-webkit-resizer {
@@ -272,3 +294,17 @@
 .input-message::after {
     content: "Your message";
 }
+
+@keyframes slide-in {
+    0% {
+      opacity: 0;
+      transform: translateY(-50%);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
