--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 <app-portfolio (visible2)="isArrowVisible2 = $event"></app-portfolio>
 <app-arrow3></app-arrow3>
 <app-contact></app-contact>
+<app-footer></app-footer>
