navbar style update

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -70,7 +70,7 @@
                     <div class="privacy-policy-box">
                         <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
                             <label class="agree-box">
-                                <input type="checkbox" (change)="onCheckboxChange()" formControlName="checkBox"><!--  (change)="onCheckboxChange()" -->
+                                <input type="checkbox" (change)="onCheckboxChange()" formControlName="checkBox">
                                 <span class="checkmark"></span>
                             </label>
                         </div>
