--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,13 +26,13 @@
                 <a href="mailto:pesendorfer.gerald@hotmail.com">pesendorfer.gerald@hotmail.com</a>
             </div>
             <div class="footer-links">
-                <a  href="#">
+                <a class="link1" href="#">
                     <img src="./assets/img/github.png">
                 </a>
-                <a  href="#">
+                <a class="link2" href="#">
                     <img src="./assets/img/email.png">
                 </a>
-                <a  href="#">
+                <a class="link3" href="#">
                     <img src="./assets/img/linkedin.png">
                 </a>
             </div>
