--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -159,17 +159,44 @@
                 width: 200px;
                 display: flex;
                 justify-content: space-between;
+                align-items: flex-end;
 
                 a {
                     cursor: pointer;
+                    padding-bottom: 0;
+                    animation: hover-link-inaktiv 0.2s ease-in-out reverse;
 
                     img {
                         height: 40px;
+                    }
+
+                    &:hover {
+                        animation: hover-link-active 0.2s ease-in-out forwards;
                     }
                 }
             }
         }
     }
+}
+
+@keyframes hover-link-inaktiv {
+    0% {
+        padding-bottom: 10px;
+      }
+    
+      100% {
+        padding-bottom: 0px;
+      }
+}
+
+@keyframes hover-link-active {
+    0% {
+        padding-bottom: 0px;
+      }
+    
+      100% {
+        padding-bottom: 10px;
+      }
 }
 
 .hide-menu {
